change email id to personal email

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
       
           // Create a temporary input element to copy the email address to the clipboard
           var tempInput = document.createElement("input");
-          tempInput.value = "example@example.com";
+          tempInput.value = "vatsalchowdhary03@gmail.com";
           document.body.appendChild(tempInput);
           tempInput.select();
       
