modify button alert

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
     <script>
         document.getElementById("emailButton").addEventListener("click", function() {
           // Show the initial pop-up
-          alert("Here is my email address.");
+          alert("Click ok to copy my email address.");
       
           // Create a temporary input element to copy the email address to the clipboard
           var tempInput = document.createElement("input");
